# rag-knowledge-base

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  企业级RAG项目开发指南-精简版.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  2026_03_05_1300-d65e4beb58cf_add_conversation_history.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  chat.py  documents.py  processing.py  roles.py  search.py
backend/app/core/: config.py  document_loaders.py  llm_client.py  prompt_templates.py  vector_store.py
backend/app/core/roles/: __init__.py  hr_assistant.py  product_consultant.py  technical_support.py
backend/app/models/: __init__.py  chat.py  chunk.py  document.py  role.py
backend/app/services/: __init__.py  document_processor.py  document_service.py  embedding_service.py  rag_service.py  role_service.py
backend/scripts/: test_end_to_end.py
backend/src/: __init__.py  config.py  main.py
backend/src/models/: __init__.py  conversation.py  database.py  document.py
backend/src/services/: conversation_service.py
backend/src/vectorstore/: __init__.py  chroma_client.py
backend/tests/: test_chat_api.py  test_conversation_api.py  test_role_api.py
backend/uploads/: 66872051-8442-4093-8ecf-65ec11055039.txt
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  (+2 more)
(+65 files in other folders)
